k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demblock-ingress
  labels:
    app: demblock-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "demblock-global-ip"
    networking.gke.io/managed-certificates: "demblock-certs"
spec:
  backend:
    serviceName: demblock
    servicePort: 21080
  rules:
    - host: demblock.com
      http:
        paths:
        - backend:
            serviceName: demblock
            servicePort: 21080
    - host: backend.demblock.com
      http:
        paths:
        - backend:
            serviceName: demblock
            servicePort: 20080
    - host: demblock-tge.com
      http:
        paths:
        - backend:
            serviceName: demblock-tge
            servicePort: 21080
    - host: backend.demblock-tge.com
      http:
        paths:
        - backend:
            serviceName: demblock-tge
            servicePort: 20080
    - host: token.demblock-tge.com
      http:
        paths:
        - backend:
            serviceName: demblock-token
            servicePort: 3000
